# template-c-app

./: .gitignore  CMakeLists.txt  README.md
src/: version.h.in
src/main/: CMakeLists.txt  main.c
src/sample_app/: CMakeLists.txt
src/sample_app/ui/: interface.c  interface.h
tests/: CMakeLists.txt  test_main.c
